--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-image": "^1.3.1",
     "react-infinite-scroller": "^1.1.3",
     "react-redux": "^5.0.5",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "0.9.5",
     "react-springy-parallax": "^1.2.0",
